[package]
name = "scale-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serialport = { version = "4.9.0", default-features = false, features = ["serde"] }
